gitops/apps/karakeep/svc-meilisearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-meilisearch
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: karakeep-meilisearch
  ports:
    - name: http
      port: 7700
      targetPort: 7700
      protocol: TCP
