gitops/apps/karakeep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/name: Karakeep
    gethomepage.dev/icon: karakeep.png
    gethomepage.dev/description: Bookmark and web archive manager
    gethomepage.dev/href: "http://karakeep.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: karakeep.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karakeep
                port:
                  number: 3000
